modified:   index.html

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           <p class="sub-text color1">[ omelette-bio ]</p>
           <h1>Francois Flandin.</h1>
           <p class="sub-text color2">
-            CS student at University Côte d’Azur,<br>passionate about computer science, low level development, and computer architecture.
+            CS student at University Côte d’Azur
           </p>
           <div>
             <ul class="links color3">
@@ -43,6 +43,14 @@
 
 
       <section>
+
+        <article class="flex-col-center">
+          <h2 class="part-title">about me</h2>
+          <p>
+            Hello, my name is Francois Flandin <br>
+            I'm a CS student at University Côte d’Azur, passionate about computer science, low level development, and computer architecture.
+          </p>
+        </article>
 
         <article class="flex-col-center">
           <h2 class="part-title">my studies</h2>
@@ -72,28 +80,28 @@
         <article class="flex-col-center">
           <h2 class="part-title">university projects</h2>
 
-          <a href="https://github.com/omelette-bio/bataille-navale">
+          <a href="https://github.com/omelette-bio/bataille-navale" target="_blank">
             <h3 class="link">battleship [12.2022]</h3>
           </a>
           <p>End of semester project of the data structures and C programming course</p>
 
-          <a href="https://github.com/omelette-bio/mrsync">
+          <a href="https://github.com/omelette-bio/mrsync" target="_blank">
             <h3 class="link">mrsync [05.2023]</h3>
           </a>
           <p>End of semester project of the system programming course, consisting of making a mini rsync, only works locally</p>
 
-          <a href="https://github.com/omelette-bio/projet-concept-ia">
+          <a href="https://github.com/omelette-bio/projet-concept-ia" target="_blank">
             <h3 class="link">ai concepts [05.2023]</h3>
           </a>
           <p>End of semester project of the ai concepts course, consisting of making a program creating problem solving graphs</p>
 
-          <a href="https://github.com/omelette-bio/les-nuits-de-padhiver">
+          <a href="https://github.com/omelette-bio/les-nuits-de-padhiver" target="_blank">
             <h3 class="link">text rpg [09.2023]</h3>
           </a>
           <p>First project of the object oriented programming and design course, consisting of making a simple rpg in java, 
             in order to get familiar with object oriented programming.</p>
           
-          <a href="https://github.com/omelette-bio/midi2wav">
+          <a href="https://github.com/omelette-bio/midi2wav" target="_blank">
             <h3 class="link">midi to wav converter [10.2023]</h3>
           </a>
           <p>
