modified:   index.css 	modified:   index.html 	modified:   vars.css

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           </p>
           <div>
             <ul class="links color3">
-              <li>[ <a href="docs/cv_light.pdf" download target="_blank"><!--mon cv-->my resume</a> ]</li>
+              <li>[ <a href="docs/cv_light.pdf" download target="_blank">my resume</a> ]</li>
               <li>[ <a href="https://github.com/omelette-bio" target="_blank">github</a> ]</li>
               <li>[ <a>linkedin</a> ]</li>
             </ul>
@@ -47,8 +47,9 @@
         <article class="flex-col-center">
           <h2 class="part-title">about me</h2>
           <p>
-            Hello, my name is Francois Flandin <br>
-            I'm a CS student at University Côte d’Azur, passionate about computer science, low level development, and computer architecture.
+            Hello, my name is <span class="text-highlight">Francois Flandin</span> <br>
+            I'm a CS student at University Côte d’Azur, <br>passionate about computer science, low level development, and computer architecture.<br>
+            My favorite programming languages are <span class="rust">Rust</span>, and <span class="python">Python</span>.
           </p>
         </article>
 
