modified:   index.css 	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -47,9 +47,10 @@
         <article class="flex-col-center">
           <h2 class="part-title">about me</h2>
           <p>
-            Hello, my name is <span class="text-highlight">Francois Flandin</span> <br>
-            I'm a CS student at University Côte d’Azur, <br>passionate about computer science, low level development, and computer architecture.<br>
-            My favorite programming languages are <span class="rust">Rust</span>, and <span class="python">Python</span>.
+            Hello, my name is <span class="text-highlight">Francois Flandin</span> <br><br>
+            I'm a CS student at University Côte d’Azur, <br>passionate about computer science, low level development, and computer architecture.<br><br>
+            I'm currently learning <span class="rust">Rust</span>, and it's my favorite programming language with <span class="python">Python</span>.<br>
+            But I also like to use C, Java, and OCaml.
           </p>
         </article>
 
