modified:   index.css 	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           <p class="sub-text color1">[ omelette-bio ]</p>
           <h1>Francois Flandin.</h1>
           <p class="sub-text color2">
-            CS student at University Côte d’Azur
+            CS student at Université Côte d’Azur
           </p>
           <div>
             <ul class="links color3">
@@ -58,7 +58,7 @@
           <h2 class="part-title">my studies</h2>
           <a href="https://upinfo.univ-cotedazur.fr">
             <h3 class="link">
-              University Nice Côte d'Azur [2021 - 2024]
+              Université Nice Côte d'Azur [2021 - 2024]
             </h3>
           </a>
           <p>
@@ -81,7 +81,15 @@
             <li class="comps-title">[ languages ]</li>
             <li class="comps-elem">French (native), English (B2)</li>
             <li class="comps-title">[ others ]</li>
-            <li class="comps-elem">Processor microarchitecture design, computer architecture, linux, low level development, system programming, object-oriented programming, functionnal programming</li>
+            <li class="comps-elem jsp"> 
+              <span>Processor microarchitecture design,</span>
+              <span>computer architecture,</span>
+              <span>linux,</span>
+              <span>low level development,</span>
+              <span>system programming,</span>
+              <span>object-oriented programming,</span>
+              <span>functionnal programming</span>
+            </li>
           </ul>
         </article>
         
