modified:   index.css 	modified:   index.html 	modified:   vars.css

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       <section>
 
         <article class="flex-col-center">
-          <h2 class="part-title">about me</h2>
+          <h2 class="part-title">~ > about me</h2>
           <div class="flex-col-center">
             <p class="intro">Hello, my name is <span class="text-highlight">Francois Flandin</span></p>
             <p class="intro">I'm a CS student at University Côte d’Azur, <br>passionate about computer science, low level development, and computer architecture.</p>
@@ -55,7 +55,7 @@
         </article>
 
         <article class="flex-col-center">
-          <h2 class="part-title">my studies</h2>
+          <h2 class="part-title">~ > studies</h2>
           <a href="https://upinfo.univ-cotedazur.fr">
             <h3 class="link">
               Université Nice Côte d'Azur [2021 - 2024]
@@ -68,7 +68,7 @@
         </article>
 
         <article class="flex-col-center">
-          <h2 class="part-title">my skills</h2>
+          <h2 class="part-title">~ > skills</h2>
           <ul class="comps">
             <li class="comps-title">[ programming ]</li>
             <li class="comps-elem">
@@ -94,7 +94,7 @@
         </article>
         
         <article class="flex-col-center">
-          <h2 class="part-title">university projects</h2>
+          <h2 class="part-title">~ > uprojects</h2>
 
           <a href="https://github.com/omelette-bio/bataille-navale" target="_blank">
             <h3 class="link">battleship [12.2022]</h3>
@@ -111,7 +111,7 @@
           </a>
           <p>End of semester project of the ai concepts course, consisting of making a program creating problem solving graphs</p>
 
-          <a href="https://github.com/omelette-bio/les-nuits-de-padhiver" target="_blank">
+          <a href="https://github.com/omelette-bio/td1-java" target="_blank">
             <h3 class="link">text rpg [09.2023]</h3>
           </a>
           <p>First project of the object oriented programming and design course, consisting of making a simple rpg in java, 
@@ -124,6 +124,17 @@
             Second project of the object oriented programming and design course, consisting of making a midi to wav file converter,
             in order to learn how to use external libraries.
           </p>
+
+          <a href="#" target="_blank">
+            <h3 class="link">text rpg 2 [12.2023]</h3>
+          </a>
+          <p>Third project of the object oriented programming and design course, consisting of remaking the first project while implementing
+            some Desing Patterns.</p>
+
+          <a href="https://github.com/omelette-bio/les-nuits-de-padhiver" target="_blank">
+            <h3 class="link">text generation [12.23]</h3>
+          </a>
+          <p>Final project of the Functionnal programming, consisting of making an ai-like text generator in OCaml using Markov Chains.</p>
       </section>
 
 
