modified:   index.html

--- a/index.html
+++ b/index.html
@@ -125,14 +125,14 @@
             in order to learn how to use external libraries.
           </p>
 
-          <a href="#" target="_blank">
-            <h3 class="link">text rpg 2 [12.2023]</h3>
+          <a href="#">
+            <h3 class="link">text rpg 2 [WIP]</h3>
           </a>
           <p>Third project of the object oriented programming and design course, consisting of remaking the first project while implementing
             some Desing Patterns.</p>
 
-          <a href="https://github.com/omelette-bio/les-nuits-de-padhiver" target="_blank">
-            <h3 class="link">text generation [12.23]</h3>
+          <a href="#"">
+            <h3 class="link">text generation [WIP]</h3>
           </a>
           <p>Final project of the Functionnal programming, consisting of making an ai-like text generator in OCaml using Markov Chains.</p>
       </section>
