deleted:    img/gh.png 	new file:   img/logo.png 	modified:   index.html 	modified:   vars.css

--- a/index.html
+++ b/index.html
@@ -1,11 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta property="og:title" content="Flandin François">
+  <meta property="og:description" content="Etudiant en L3 info">
+  <meta property="og:image" content="http://francois-flandin.fr/docs/icon.jpg">
+  <meta property="og:url" content="http://francois-flandin.fr">
+
+
+  <title>Francois Flandin</title>
+  <link rel="icon" href="img/logo.png">
+
   <link rel='stylesheet' type='text/css' media='screen' href='style.css'>
   <script src="app.js" defer></script>
-  <title>Document</title>
 </head>
 <body>
   <main>
