modified:   index.html

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta property="og:title" content="Flandin François">
   <meta property="og:description" content="Etudiant en L3 info">
-  <meta property="og:image" content="http://francois-flandin.fr/docs/icon.jpg">
-  <meta property="og:url" content="http://francois-flandin.fr">
+  <meta property="og:image" content="https://francois-flandin.fr/img/logo.jpg">
+  <meta property="og:url" content="https://francois-flandin.fr">
 
 
   <title>Francois Flandin</title>
