modified:   index.html 	modified:   style.css 	modified:   vars.css

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div class="nav-container">
       <nav>
         <a id='btn1'>Projects</a>
-        <a id='btn2'>Contacts</a>
+        <!-- <a id='btn2'>Contact</a> -->
       </nav>
     </div>
 
@@ -39,7 +39,7 @@
         <p class="cmd-text">
           ["<a href="mailto:francoisflandin@proton.me">flandinfrancois@proton.me</a>",
           "<a href="https://github.com/omelette-bio">github</a>",
-          "linkedin"]
+          "<a href="https://www.linkedin.com/in/fran%C3%A7ois-flandin-b2a8b2295/">linkedin</a>"]
         </p>
       </div>
       <div class="command">
@@ -53,7 +53,11 @@
       </div>
       <div class="command">
         <p class="cmd-text"><span class="cmd-base">francois@flandin</span>:~$ <span class="cmd-command">getskills</span></p>
-        <p class="cmd-text">["Python","Rust","C","Ocaml","Java"]</p>
+        <p class="cmd-text">["Python","C","Ocaml","Java"]</p>
+      </div>
+      <div class="command">
+        <p class="cmd-text"><span class="cmd-base">francois@flandin</span>:~$ <span class="cmd-command">getlearning</span></p>
+        <p class="cmd-text">["Rust","Unity"]</p>
       </div>
     </div>
 
@@ -79,7 +83,7 @@
       </div>
     </div>
 
-    <div class="contact" id="contact">
+    <!-- <div class="contact" id="contact">
       <h2 class="part-title">Contact me</h2>
       <div class="contact-container">
         <div class="contact-item">
@@ -92,7 +96,7 @@
           <a href="https://www.linkedin.com/in/fran%C3%A7ois-flandin-b2a8b2295/">linkedin</a>
         </div>
       </div>
-    </div>
+    </div> -->
 
     <div class="footer">
       <p class="footer-text">François Flandin @2023</p>
