modified:   index.html 	modified:   style.css 	modified:   vars.css

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       </div>
       <div class="command">
         <p class="cmd-text"><span class="cmd-base">francois@flandin</span>:~$ <span class="cmd-command">geteducation</span></p>
-        <p class="cmd-text">Côte d'Azur University : computer science degree from 2021 to 2024</p>
+        <p class="cmd-text"><span class="cmd-title">Côte d'Azur University</span> : computer science degree from 2021 to 2024</p>
         <p class="cmd-text">Also a member of the university's <a href="https://gdsc.community.dev/cote-dazur-university/">GDSC</a></p>
       </div>
       <div class="command">
@@ -62,6 +62,35 @@
     </div>
 
     <div class="projects" id="projects">
+      <h2 class="part-title">My projects</h2>
+      <div class="terminal">
+        <div class="command">
+          <p class="cmd-text"><span class="cmd-base">francois@flandin</span>:~$ <span class="cmd-command">getproject1</span></p>
+          <p class="cmd-text"><span class="cmd-title">name</span>: <a href="https://github.com/omelette-bio/mrsync" target="_blank">mini-rsync</a></p>
+          <p class="cmd-text"><span class="cmd-title">date</span>: may 2023</p>
+          <p class="cmd-text"><span class="cmd-title">description</span>:</p>
+          <p class="cmd-text"> End of semester project of the system programming course,<br> consisting of making a mini rsync, but it only works locally</p>
+        </div>
+
+        <div class="command">
+          <p class="cmd-text"><span class="cmd-base">francois@flandin</span>:~$ <span class="cmd-command">getproject2</span></p>
+          <p class="cmd-text"><span class="cmd-title">name</span>: <a href="https://github.com/omelette-bio/projet-concept-ia" target="_blank">ai concepts</a></p>
+          <p class="cmd-text"><span class="cmd-title">date</span>: may 2023</p>
+          <p class="cmd-text"><span class="cmd-title">description</span>:</p>
+          <p class="cmd-text">End of semester project of the ai concepts course,<br> consisting of making a program creating problem solving graphs</p>
+        </div>
+        
+        <div class="command">
+          <p class="cmd-text"><span class="cmd-base">francois@flandin</span>:~$ <span class="cmd-command">getproject3</span></p>
+          <p class="cmd-text"><span class="cmd-title">name</span>: random text generation</p>
+          <p class="cmd-text"><span class="cmd-title">date</span>: december 2023</p>
+          <p class="cmd-text"><span class="cmd-title">description</span>:</p>
+          <p class="cmd-text">End of semester project of the functionnal programming course,<br> consisting of making an ai-like text generator in OCaml using Markov Chains.</p>
+        </div>
+      </div>
+    </div>
+
+    <!-- <div class="projects" id="projects">
       <h2 class="part-title">My projects</h2>
       <div class="project">
         <div class="project-description">
@@ -81,7 +110,7 @@
           <p class="cmd-text">Final project of the functionnal programming course, consisting of making an ai-like text generator in OCaml using Markov Chains.</p>
         </div>
       </div>
-    </div>
+    </div> -->
 
     <!-- <div class="contact" id="contact">
       <h2 class="part-title">Contact me</h2>
