modified:   index.html

--- a/index.html
+++ b/index.html
@@ -44,7 +44,10 @@
       </div>
       <div class="command">
         <p class="cmd-text"><span class="cmd-base">francois@flandin</span>:~$ <span class="cmd-command">getinterests</span></p>
-        <p class="cmd-text">["computer science","manga reading","<a href="https://steamcommunity.com/id/omelette-bio/" target="_blank">gaming</a>","animation"]</p>
+        <p class="cmd-text">["computer science",
+                              "<a href="https://steamcommunity.com/id/omelette-bio/" target="_blank">gaming</a>",
+                              "<a href="https://www.nautiljon.com/membre/possede,franfran_sama,manga_volume.html">manga</a>",
+                              "<a href="https://www.nautiljon.com/membre/possede,franfran_sama,dvd.html">animation"</a>]</p>
       </div>
       <div class="command">
         <p class="cmd-text"><span class="cmd-base">francois@flandin</span>:~$ <span class="cmd-command">geteducation</span></p>
@@ -62,7 +65,7 @@
     </div>
 
     <div class="projects" id="projects">
-      <h2 class="part-title">My projects</h2>
+      <h2 class="part-title">some projects</h2>
       <div class="terminal">
         <div class="command">
           <p class="cmd-text"><span class="cmd-base">francois@flandin</span>:~$ <span class="cmd-command">getproject1</span></p>
