--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         
         <div class="command">
           <p class="cmd-text"><span class="cmd-base">francois@flandin</span>:~$ <span class="cmd-command">getproject3</span></p>
-          <p class="cmd-text"><span class="cmd-title">name</span>: random text generation</p>
+          <p class="cmd-text"><span class="cmd-title">name</span>: <a href="https://github.com/omelette-bio/projet-pf" target="_blank">random text generation</a></p>
           <p class="cmd-text"><span class="cmd-title">date</span>: december 2023</p>
           <p class="cmd-text"><span class="cmd-title">description</span>:</p>
           <p class="cmd-text">End of semester project of the functionnal programming course,<br> consisting of making an ai-like text generator in OCaml using Markov Chains.</p>
