--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     </div>
 
     <div class="projects" id="projects">
-      <h2 class="part-title">some projects</h2>
+      <h2 class="part-title">university projects</h2>
       <div class="terminal">
         <div class="command">
           <p class="cmd-text"><span class="cmd-base">francois@flandin</span>:~$ <span class="cmd-command">getproject1</span></p>
