--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       </div>
       <div class="command">
         <p class="cmd-text"><span class="cmd-base">francois@flandin</span>:~$ <span class="cmd-command">getlearning</span></p>
-        <p class="cmd-text">["Rust","Unity"]</p>
+        <p class="cmd-text">["Rust"]</p>
       </div>
     </div>
 
