modified:   index.html modified:   vars.css

--- a/index.html
+++ b/index.html
@@ -90,48 +90,19 @@
           <p class="cmd-text"><span class="cmd-title">description</span>:</p>
           <p class="cmd-text">End of semester project of the functionnal programming course,<br> consisting of making an ai-like text generator in OCaml using Markov Chains.</p>
         </div>
+
+        <div class="command">
+          <p class="cmd-text"><span class="cmd-base">francois@flandin</span>:~$ <span class="cmd-command">getproject4</span></p>
+          <p class="cmd-text"><span class="cmd-title">name</span>: <a href="https://github.com/omelette-bio/projet-pf" target="_blank">compiler</a></p>
+          <p class="cmd-text"><span class="cmd-title">date</span>: feb - may 2024</p>
+          <p class="cmd-text"><span class="cmd-title">description</span>:</p>
+          <p class="cmd-text">End of semester project of the compilation course,<br> consisting of building a mini-C compiler in group of two.</p>
+        </div>
       </div>
     </div>
 
-    <!-- <div class="projects" id="projects">
-      <h2 class="part-title">My projects</h2>
-      <div class="project">
-        <div class="project-description">
-          <h3><a href="https://github.com/omelette-bio/mrsync" target="_blank">mini-rsync [05.2023]</a></h3>
-          <p class="cmd-text">End of semester project of the system programming course, consisting of making a mini rsync but it only works locally</p>
-        </div>
-      </div>
-      <div class="project">
-        <div class="project-description">
-          <h3><a href="https://github.com/omelette-bio/projet-concept-ia" target="_blank">ai concepts [05.2023]</a></h3>
-          <p class="cmd-text">End of semester project of the ai concepts course, consisting of making a program creating problem solving graphs</p>
-        </div>
-      </div>
-      <div class="project">
-        <div class="project-description">
-          <h3>random text generation [WIP]</h3>
-          <p class="cmd-text">Final project of the functionnal programming course, consisting of making an ai-like text generator in OCaml using Markov Chains.</p>
-        </div>
-      </div>
-    </div> -->
-
-    <!-- <div class="contact" id="contact">
-      <h2 class="part-title">Contact me</h2>
-      <div class="contact-container">
-        <div class="contact-item">
-          <a href="mailto:flandinfrancois@proton.me">mail</a>
-        </div>
-        <div class="contact-item">
-          <a href="https://github.com/omelette-bio">github</a>
-        </div>
-        <div class="contact-item">
-          <a href="https://www.linkedin.com/in/fran%C3%A7ois-flandin-b2a8b2295/">linkedin</a>
-        </div>
-      </div>
-    </div> -->
-
     <div class="footer">
-      <p class="footer-text">François Flandin @2023</p>
+      <p class="footer-text">François Flandin @2024</p>
     </div>  
   </main>
 </body>
