modified:   index.html

--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
     <div class="nav-container">
       <nav>
         <a id='btn1'>Projects</a>
-        <!-- <a id='btn2'>Contact</a> -->
       </nav>
     </div>
 
@@ -93,7 +92,7 @@
 
         <div class="command">
           <p class="cmd-text"><span class="cmd-base">francois@flandin</span>:~$ <span class="cmd-command">getproject4</span></p>
-          <p class="cmd-text"><span class="cmd-title">name</span>: <a href="https://github.com/omelette-bio/projet-pf" target="_blank">compiler</a></p>
+          <p class="cmd-text"><span class="cmd-title">name</span>: <a href="#" target="_blank">compiler</a></p>
           <p class="cmd-text"><span class="cmd-title">date</span>: feb - may 2024</p>
           <p class="cmd-text"><span class="cmd-title">description</span>:</p>
           <p class="cmd-text">End of semester project of the compilation course,<br> consisting of building a mini-C compiler in group of two.</p>
