modified:   index.html

--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@
       </div>
       <div class="command">
         <p class="cmd-text"><span class="cmd-base">francois@flandin</span>:~$ <span class="cmd-command">getinterests</span></p>
-        <p class="cmd-text">["computer science",
+        <p class="cmd-text">["<span class="cmd-title">computer science</span>",
                               "<a href="https://steamcommunity.com/id/omelette-bio/" target="_blank">gaming</a>",
                               "<a href="https://www.nautiljon.com/membre/possede,franfran_sama,manga_volume.html">manga</a>",
-                              "<a href="https://www.nautiljon.com/membre/possede,franfran_sama,dvd.html">animation"</a>]</p>
+                              "<a href="https://www.nautiljon.com/membre/possede,franfran_sama,dvd.html">animation</a>"]</p>
       </div>
       <div class="command">
         <p class="cmd-text"><span class="cmd-base">francois@flandin</span>:~$ <span class="cmd-command">geteducation</span></p>
@@ -55,11 +55,11 @@
       </div>
       <div class="command">
         <p class="cmd-text"><span class="cmd-base">francois@flandin</span>:~$ <span class="cmd-command">getskills</span></p>
-        <p class="cmd-text">["Python","C","Ocaml","Java"]</p>
+        <p class="cmd-text">["<span class="cmd-title">C</span>","<span class="cmd-title">Python</span>","<span class="cmd-title">Ocaml</span>","<span class="cmd-title">Java</span>"]</p>
       </div>
       <div class="command">
         <p class="cmd-text"><span class="cmd-base">francois@flandin</span>:~$ <span class="cmd-command">getlearning</span></p>
-        <p class="cmd-text">["Rust"]</p>
+        <p class="cmd-text">["<span class="cmd-title">Rust</span>"]</p>
       </div>
     </div>
 
