--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 
         <div class="command">
           <p class="cmd-text"><span class="cmd-base">francois@flandin</span>:~$ <span class="cmd-command">getproject4</span></p>
-          <p class="cmd-text"><span class="cmd-title">name</span>: <a href="#" target="_blank">compiler</a></p>
+          <p class="cmd-text"><span class="cmd-title">name</span>: <a href="#" target="_blank">compiler</a> (wip)</p>
           <p class="cmd-text"><span class="cmd-title">date</span>: feb - may 2024</p>
           <p class="cmd-text"><span class="cmd-title">description</span>:</p>
           <p class="cmd-text">End of semester project of the compilation course,<br> consisting of building a mini-C compiler in group of two.</p>
@@ -100,7 +100,7 @@
 
         <div class="command">
           <p class="cmd-text"><span class="cmd-base">francois@flandin</span>:~$ <span class="cmd-command">getproject5</span></p>
-          <p class="cmd-text"><span class="cmd-title">name</span>: <a href="#" target="_blank">citrtic enone</a></p>
+          <p class="cmd-text"><span class="cmd-title">name</span>: <a href="#" target="_blank">citrtic enone</a> (wip)</p>
           <p class="cmd-text"><span class="cmd-title">date</span>: feb - may 2024</p>
           <p class="cmd-text"><span class="cmd-title">description</span>:</p>
           <p class="cmd-text">Group project (5 members) across the semester for the TERD course,<br> consisting of building a small gartic phone in php</p>
