--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <div class="terminal">
       <div class="command">
         <p class="cmd-text"><span class="cmd-base">francois@flandin</span>:~$ <span class="cmd-command">getresume</span></p>
-        <p class="cmd-text"><a href="docs/cv_light.pdf" target="_blank" download>resume.pdf</a></p>
+        <p class="cmd-text"><a href="docs/cv_fflandin_fr.pdf" target="_blank" download>resume_fr.pdf</a></p>
       </div>
       <div class="command">
         <p class="cmd-text"><span class="cmd-base">francois@flandin</span>:~$ <span class="cmd-command">getcontact</span></p>
