modified:   index.html modified:   style.css modified:   vars.css

--- a/index.html
+++ b/index.html
@@ -43,24 +43,31 @@
       </div>
       <div class="command">
         <p class="cmd-text"><span class="cmd-base">francois@flandin</span>:~$ <span class="cmd-command">getinterests</span></p>
-        <p class="cmd-text">["<span class="cmd-title">computer science</span>",
+        <p class="cmd-text">["computer science",
                               "<a href="https://steamcommunity.com/id/omelette-bio/" target="_blank">gaming</a>",
                               "<a href="https://www.nautiljon.com/membre/possede,franfran_sama,manga_volume.html">manga</a>",
-                              "<a href="https://www.nautiljon.com/membre/possede,franfran_sama,dvd.html">animation</a>"]</p>
+                              "<a href="https://www.nautiljon.com/membre/possede,franfran_sama,dvd.html">animation</a>",
+                              "<a href="https://open.spotify.com/user/zezwiafwzq7l4pl1onljkzcqz?si=213b4a3b79884a7e">music</a>"]</p>
       </div>
       <div class="command">
         <p class="cmd-text"><span class="cmd-base">francois@flandin</span>:~$ <span class="cmd-command">geteducation</span></p>
         <p class="cmd-text"><span class="cmd-title">Côte d'Azur University</span> : computer science degree from 2021 to 2024</p>
         <p class="cmd-text">Also a member of the university's <a href="https://gdsc.community.dev/cote-dazur-university/">GDSC</a></p>
       </div>
+
       <div class="command">
         <p class="cmd-text"><span class="cmd-base">francois@flandin</span>:~$ <span class="cmd-command">getskills</span></p>
-        <p class="cmd-text">["<span class="cmd-title">C</span>","<span class="cmd-title">Python</span>","<span class="cmd-title">Ocaml</span>","<span class="cmd-title">Java</span>"]</p>
+        <p class="cmd-text">
+          <span class="cmd-title">Programming</span> :
+          ["C","Rust","Python","Java","PHP","Ocaml"]
+          <br><span class="cmd-title">Theorical</span> :
+          Data Structures and Algorithms, OS, CPU architecture and conception, Automata and Language theory
+        </p>
       </div>
-      <div class="command">
+      <!-- <div class="command">
         <p class="cmd-text"><span class="cmd-base">francois@flandin</span>:~$ <span class="cmd-command">getlearning</span></p>
-        <p class="cmd-text">["<span class="cmd-title">Rust</span>"]</p>
-      </div>
+        <p class="cmd-text">[]</p>
+      </div> -->
     </div>
 
     <div class="projects" id="projects">
