--- a/index.html
+++ b/index.html
@@ -17,12 +17,6 @@
 </head>
 <body>
   <main>
-    <div class="nav-container">
-      <nav>
-        <a id='btn1'>Projects</a>
-      </nav>
-    </div>
-
     <p class="intro sub-text">Hi 👋 my name is</p>
     <h1 class="part-title">Flandin Francois</h1>
     
@@ -30,88 +24,8 @@
 
     <div class="terminal">
       <div class="command">
-        <p class="cmd-text"><span class="cmd-base">francois@flandin</span>:~$ <span class="cmd-command">getresume</span></p>
-        <p class="cmd-text"><a href="docs/cv_fflandin_fr.pdf" target="_blank" download>resume_fr.pdf</a></p>
-      </div>
-      <div class="command">
-        <p class="cmd-text"><span class="cmd-base">francois@flandin</span>:~$ <span class="cmd-command">getcontact</span></p>
-        <p class="cmd-text">
-          ["<a href="mailto:francoisflandin@proton.me">flandinfrancois@proton.me</a>",
-          "<a href="https://github.com/omelette-bio">github</a>",
-          "<a href="https://www.linkedin.com/in/fran%C3%A7ois-flandin-b2a8b2295/">linkedin</a>"]
-        </p>
-      </div>
-      <div class="command">
-        <p class="cmd-text"><span class="cmd-base">francois@flandin</span>:~$ <span class="cmd-command">getinterests</span></p>
-        <p class="cmd-text">["computer science",
-                              "<a href="https://steamcommunity.com/id/omelette-bio/" target="_blank">gaming</a>",
-                              "<a href="https://www.nautiljon.com/membre/possede,franfran_sama,manga_volume.html">manga</a>",
-                              "<a href="https://www.nautiljon.com/membre/possede,franfran_sama,dvd.html">animation</a>",
-                              "<a href="https://open.spotify.com/user/zezwiafwzq7l4pl1onljkzcqz?si=213b4a3b79884a7e">music</a>"]</p>
-      </div>
-      <div class="command">
-        <p class="cmd-text"><span class="cmd-base">francois@flandin</span>:~$ <span class="cmd-command">geteducation</span></p>
-        <p class="cmd-text"><span class="cmd-title">Côte d'Azur University</span> : computer science degree from 2021 to 2024</p>
-        <p class="cmd-text">Also a member of the university's <a href="https://gdsc.community.dev/cote-dazur-university/">GDSC</a></p>
-      </div>
-
-      <div class="command">
-        <p class="cmd-text"><span class="cmd-base">francois@flandin</span>:~$ <span class="cmd-command">getskills</span></p>
-        <p class="cmd-text">
-          <span class="cmd-title">Programming</span> :
-          ["C","Rust","Python","Java","PHP","Ocaml"]
-          <br><span class="cmd-title">Theorical</span> :
-          Data Structures and Algorithms, OS, CPU architecture and conception, Automata and Language theory
-        </p>
-      </div>
-      <!-- <div class="command">
-        <p class="cmd-text"><span class="cmd-base">francois@flandin</span>:~$ <span class="cmd-command">getlearning</span></p>
-        <p class="cmd-text">[]</p>
-      </div> -->
-    </div>
-
-    <div class="projects" id="projects">
-      <h2 class="part-title">university projects</h2>
-      <div class="terminal">
-        <div class="command">
-          <p class="cmd-text"><span class="cmd-base">francois@flandin</span>:~$ <span class="cmd-command">getproject1</span></p>
-          <p class="cmd-text"><span class="cmd-title">name</span>: <a href="https://github.com/omelette-bio/mrsync" target="_blank">mini-rsync</a></p>
-          <p class="cmd-text"><span class="cmd-title">date</span>: may 2023</p>
-          <p class="cmd-text"><span class="cmd-title">description</span>:</p>
-          <p class="cmd-text"> End of semester project of the system programming course,<br> consisting of making a mini rsync, but it only works locally</p>
-        </div>
-
-        <div class="command">
-          <p class="cmd-text"><span class="cmd-base">francois@flandin</span>:~$ <span class="cmd-command">getproject2</span></p>
-          <p class="cmd-text"><span class="cmd-title">name</span>: <a href="https://github.com/omelette-bio/projet-concept-ia" target="_blank">ai concepts</a></p>
-          <p class="cmd-text"><span class="cmd-title">date</span>: may 2023</p>
-          <p class="cmd-text"><span class="cmd-title">description</span>:</p>
-          <p class="cmd-text">End of semester project of the ai concepts course,<br> consisting of making a program creating problem solving graphs</p>
-        </div>
-        
-        <div class="command">
-          <p class="cmd-text"><span class="cmd-base">francois@flandin</span>:~$ <span class="cmd-command">getproject3</span></p>
-          <p class="cmd-text"><span class="cmd-title">name</span>: <a href="https://github.com/omelette-bio/projet-pf" target="_blank">random text generation</a></p>
-          <p class="cmd-text"><span class="cmd-title">date</span>: december 2023</p>
-          <p class="cmd-text"><span class="cmd-title">description</span>:</p>
-          <p class="cmd-text">End of semester project of the functionnal programming course,<br> consisting of making an ai-like text generator in OCaml using Markov Chains.</p>
-        </div>
-
-        <div class="command">
-          <p class="cmd-text"><span class="cmd-base">francois@flandin</span>:~$ <span class="cmd-command">getproject4</span></p>
-          <p class="cmd-text"><span class="cmd-title">name</span>: <a href="#" target="_blank">compiler</a> (wip)</p>
-          <p class="cmd-text"><span class="cmd-title">date</span>: feb - may 2024</p>
-          <p class="cmd-text"><span class="cmd-title">description</span>:</p>
-          <p class="cmd-text">End of semester project of the compilation course,<br> consisting of building a mini-C compiler in group of two.</p>
-        </div>
-
-        <div class="command">
-          <p class="cmd-text"><span class="cmd-base">francois@flandin</span>:~$ <span class="cmd-command">getproject5</span></p>
-          <p class="cmd-text"><span class="cmd-title">name</span>: <a href="#" target="_blank">citrtic enone</a> (wip)</p>
-          <p class="cmd-text"><span class="cmd-title">date</span>: feb - may 2024</p>
-          <p class="cmd-text"><span class="cmd-title">description</span>:</p>
-          <p class="cmd-text">Group project (5 members) across the semester for the TERD course,<br> consisting of building a small gartic phone in php</p>
-        </div>
+        <p class="cmd-text"><span class="cmd-base">francois@flandin</span>:~$ <input type="text" id="command-prompt"></p>
+        <p class="cmd-text" id="result">Welcome ! Type "help" to have a list of all available commands</p>
       </div>
     </div>
 
