--- a/index.html
+++ b/index.html
@@ -1,37 +1,153 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
+  <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta property="og:title" content="Flandin François">
-  <meta property="og:description" content="Etudiant en L3 info">
-  <meta property="og:image" content="https://francois-flandin.fr/img/logo.jpg">
-  <meta property="og:url" content="https://francois-flandin.fr">
-
-
   <title>Francois Flandin</title>
-  <link rel="icon" href="img/logo.png">
 
-  <link rel='stylesheet' type='text/css' media='screen' href='style.css'>
-  <script src="app.js" defer></script>
+  <link rel="stylesheet" href="style.css">
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap" rel="stylesheet">
+  
 </head>
 <body>
   <main>
-    <p class="intro sub-text">Hi 👋 my name is</p>
-    <h1 class="part-title">Flandin Francois</h1>
-    
-    <p class="description sub-text">I'm a French computer science student, currently studying at Côte d'Azur University</p>
+    <header>
+      <p class="header-text">ROBCO INDUSTRIES UNIFIED OPERATING SYSTEM</p>
+      <p class="header-text">FRANCOIS FLANDIN LOGS</p>
+      <p class="header-text">FRENCH COMPUTER SCIENCE STUDENT</p>
+      <p></p>
+    </header>
+    <div class="divider"></div>
+    <section id="content">
+    </section>
 
-    <div class="terminal">
-      <div class="command">
-        <p class="cmd-text"><span class="cmd-base">francois@flandin</span>:~$ <input type="text" id="command-prompt"></p>
-        <p class="cmd-text" id="result">Welcome ! Type "help" to have a list of all available commands</p>
+    <section id="proj1">
+      <p class="skill-text">Project 1</p>
+      <p class="project-text"><u>name:</u> mini-rsync</p>
+      <p class="project-text"><u>date:</u> may 2023</p>
+      <p class="project-text"><u>language:</u> python</p>
+      <p class="project-text"><u>description:</u></p>
+      <p class="project-text">End of semester project of the system programming course,
+consisting of making a mini rsync, but it only works locally</p>
+      <div class="interaction-div">
+        <p class="interaction-text"><a href="https://github.com/omelette-bio/mrsync" target="_blank">[GitHub repo]</a></p>
+        <p class="interaction-text" onclick="goToProject2()">[Next]</p>
+        <p class="interaction-text" onclick="backToMenu()">[Back]</p>
       </div>
-    </div>
+    </section>
 
-    <div class="footer">
-      <p class="footer-text">François Flandin @2024</p>
-    </div>  
+    <section id="proj2">
+      <p class="skill-text">Project 2</p>
+      <p class="project-text"><u>name:</u> ai concepts</p>
+      <p class="project-text"><u>date:</u> may 2023</p>
+      <p class="project-text"><u>language:</u> python</p>
+      <p class="project-text"><u>description:</u></p>
+      <p class="project-text">End of semester project of the ai concepts course,
+consisting of making a program creating problem solving graphs</p>
+      <div class="interaction-div">
+        <p class="interaction-text"><a href="https://github.com/omelette-bio/projet-concept-ia" target="_blank">[GitHub repo]</a></p>
+        <p class="interaction-text" onclick="goToProject3()">[Next]</p>
+        <p class="interaction-text" onclick="backToMenu()">[Back]</p>
+      </div>
+    </section>
+
+    <section id="proj3">
+      <p class="skill-text">Project 3</p>
+      <p class="project-text"><u>name:</u> random text generation</p>
+      <p class="project-text"><u>date:</u> december 2023</p>
+      <p class="project-text"><u>language:</u> ocaml</p>
+      <p class="project-text"><u>description:</u></p>
+      <p class="project-text">End of semester project of the functionnal programming course,
+consisting of making an ai-like text generator in OCaml using Markov Chains.</p>
+      <div class="interaction-div">
+        <p class="interaction-text"><a href="https://github.com/omelette-bio/projet-pf" target="_blank">[GitHub repo]</a></p>
+        <p class="interaction-text" onclick="goToProject4()">[Next]</p>
+        <p class="interaction-text" onclick="backToMenu()">[Back]</p>
+      </div>
+    </section>
+
+    <section id="proj4">
+      <p class="skill-text">Project 4</p>
+      <p class="project-text"><u>name:</u> compiler</p>
+      <p class="project-text"><u>date:</u> 1st semester 2024</p>
+      <p class="project-text"><u>language:</u> C</p>
+      <p class="project-text"><u>description:</u></p>
+      <p class="project-text">End of semester project of the compilation course,
+consisting of building a mini-C compiler in groups of two.</p>
+      <div class="interaction-div">
+        <!-- <p class="interaction-text"><a href="https://github.com/omelette-bio/projet-pf" target="_blank">[GitHub repo]</a></p> -->
+        <!-- <p class="interaction-text" onclick="goToProject5()">[Next]</p> -->
+        <p class="interaction-text" onclick="backToMenu()">[Back]</p>
+      </div>
+    </section>
+
+    <section id="links">
+      <a href="docs/cv_fflandin_fr.pdf" target="_blank" download=""><p class="interaction-text">[My Resume]</p></a>
+      <p class="interaction-text" onclick="goToContactPage()">[My Contacts]</p>
+      <p class="interaction-text" id="interests-page">[My Interests]</p>
+      <p class="interaction-text" onclick="goToProgSkills()">[My Programming Skills]</p>
+      <p class="interaction-text" id="th-page">[My Theoretical Skills]</p>
+      <p class="interaction-text" onclick="goToProject1()">[My Projects]</p>
+    </section>
+
+    <section id="p-skills">
+      <p class="skill-text">My Programming Skills</p>
+      <div class="progs">
+        <div class="prog-lang">
+          <img src="img/pl-soft/rust.svg" width="70">
+          <p class="perc">35%</p>
+        </div>
+        <div class="prog-lang">
+          <img src="img/pl-soft/c.svg" width="70">
+          <p class="perc">30%</p>
+        </div>
+        <div class="prog-lang">
+          <img src="img/pl-soft/python.svg" width="70">
+          <p class="perc">40%</p>
+        </div>
+        <div class="prog-lang">
+          <img src="img/pl-soft/java.svg" width="70">
+          <p class="perc">15%</p>
+        </div>
+        <div class="prog-lang">
+          <img src="img/pl-soft/ocaml.svg" width="70">
+          <p class="perc">10%</p>
+        </div>
+      </div>
+      <p class="skill-text">Softwares I Use</p>
+      <div class="soft">
+        <div class="prog-lang">
+          <img src="img/pl-soft/vscode.svg" width="70">
+        </div>
+        <div class="prog-lang">
+          <img src="img/pl-soft/subl.svg" width="70">
+        </div>
+        <div class="prog-lang">
+          <img src="img/pl-soft/jb.svg" width="70">
+        </div>
+      </div>
+      <p class="interaction-text" onclick="backToMenu()">[Back]</p>
+    </section>
+
+    <section id="contact">
+      <p class="skill-text"> If you want to contact me </p>
+      <div class="soft">
+        <div class="prog-lang">
+          <img src="img/network/github.svg" width="70">
+        </div>
+        <div class="prog-lang">
+          <img src="img/network/linkedin.svg" width="70">
+        </div>
+        <div class="prog-lang">
+          <img src="img/network/prtn.svg" width="70">
+        </div>
+      </div>
+      <p class="interaction-text" onclick="backToMenu()">[Back]</p>
+    </section>
+    <script src="app.js"></script>
   </main>
 </body>
 </html>
